Fix card sizing on mobile

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -833,6 +833,8 @@ h1, h2, h3, h4, h5, h6 {
 /* Flip card */
 
 .flip-card {
+    width: 90vw;
+    max-width: 480px;
     height: 720px;
     perspective: 2000px;
 }
